fixed dark mode issues

--- a/assets/css/research.css
+++ b/assets/css/research.css
@@ -16,8 +16,8 @@ html[data-theme = 'light']
     --cite-close: #333;
     --cite-hover: black;
     --hover-link: rgb(189, 3, 189);
-    --shadow-col1: rgba(0,0,0,0.05);
-    --shadow-col2: rgba(75,0,0,0.05);
+    --shadow-col1: #b3b3b3;
+    --shadow-col2: #ffffff;
     --ppr-col: purple;
 }
 
@@ -39,8 +39,8 @@ html[data-theme = 'dark']{
     --cite-close: rgba(0, 0, 0, 0.192);
     --cite-hover: #fff;
     --hover-link: rgb(236, 103, 125);
-    --shadow-col1:rgb(46, 37, 37);
-    --shadow-col2:rgba(21, 22, 22, 0.459);
+    --shadow-col1:rgb(29, 28, 28);
+    --shadow-col2:rgba(34, 34, 34, 0.459);
     --ppr-col: rgb(231, 85, 109);
 }
 
@@ -89,8 +89,8 @@ body{
 
 #researchDetailsTable tr{
     border-radius: 11px;
-box-shadow:  9px 9px 8px #cacaca,
-             -9px -9px 8px #f6f6f6;
+    box-shadow:  9px 9px 8px var(--shadow-col1),
+             -9px -9px 8px var(--shadow-col2);
 }
 
 #rDetailsHead {
@@ -276,8 +276,8 @@ box-shadow:  9px 9px 8px #cacaca,
     border-color: var(--ppr-col);
     border: 0.2px solid var(--ppr-col);
     border-radius: 4px;
-    box-shadow:  5px 5px 10px #b3b3b3,
-                 -5px -5px 10px #ffffff;
+    box-shadow:  5px 5px 10px var(--shadow-col1),
+                 -5px -5px 10px var(--shadow-col2);
 }
 
 .button-accent:hover,
@@ -285,8 +285,8 @@ box-shadow:  9px 9px 8px #cacaca,
     /* background: var(--ppr-col); */
     color: var(--ppr-col);
     text-decoration: none;
-    box-shadow: inset 5px 5px 5px #bababa,
-            inset -5px -5px 5px #ffffff;
+    box-shadow: inset 5px 5px 5px var(--shadow-col1),
+            inset -5px -5px 5px var(--shadow-col2);
 }
 
 
